@@ -109,7 +109,7 @@ if (! class_exists('Wizin_Util_Web')) {
          * @param string $createDir
          * @return string $filePath
          */
-        function getFileByHttp($url = null, $createDir = null, $sendReferer = true)
+        function getFileByHttp($url = null, $createDir = null, $sendReferer = false)
         {
             if (empty($url)) {
                 return null;
@@ -202,7 +202,7 @@ if (! class_exists('Wizin_Util_Web')) {
          * @param string $url
          * @return string $contents
          */
-        function getContentsByHttp($url = null, $agent = '', $referer = '')
+        function getContentsByHttp($url = null, $agent = '', $referer = '', $sendReferer = false)
         {
             if (empty($url)) {
                 return null;
@@ -219,7 +219,7 @@ if (! class_exists('Wizin_Util_Web')) {
             $path .= (! empty($urlArray['fragment'])) ? '#' . $urlArray['fragment'] : '';
             $referer = '';
             $https = getenv('HTTPS');
-            if (empty($https) || strtolower($https) !== 'on') {
+            if ($sendReferer === true && (empty($https) || strtolower($https) !== 'on')) {
                 $referer = 'http://';
                 $referer .= getenv('SERVER_NAME');
                 $port = getenv('SERVER_PORT');
