@@ -1,4 +1,7 @@
 ----------------------------------
+[2009-11-28 Ver 0.58 -> 0.59]
+- modified 'Wizin_Util_Web::getFileByHttp' and 'Wizin_Util_Web::getContentsByHttp', change default value for send referer.
+----------------------------------
 [2009-11-28 Ver 0.57 -> 0.58]
 - added logic into Wizin_Plugin_User_Mobile, check file time and download new spec file.
 - modified 'Wizin_Util_Web::getFileByHttp', add flag for send referer.
